--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -19,7 +19,7 @@
       <td>{{ .title }}</td>
       
       {{ if .reading }}
-      <td align="center"><a href="https://d2l.pdx.edu/d2l/le/content/667907/Home">
+      <td align="center"><a href="{{ .Site.baseurl }}/reading/{{ .reading }}">
           <i class="fa fa-book fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
