change the syllabus.html

--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -6,10 +6,10 @@
   <tr>
     <th style="width:15%;text-align:right">Date</th>
     <th style="width:55%">Lesson</th>
-    <th style="width:7.5%;text-align:center">Reading</th>
-    <th style="width:7.5%;text-align:center">Assignment</th>
-    <th style="width:7.5%;text-align:center">Lecture</th>
-    <th style="width:7.5%;text-align:center">Lab</th>
+    <th style="width:7.5%;text-align:center">Lecture561</th>
+    <th style="width:7.5%;text-align:center">Assignment561</th>
+    <th style="width:7.5%;text-align:center">Lecture564</th>
+    <th style="width:7.5%;text-align:center">Assignment564</th>
   </tr>
 
   {{ range $.Site.Data.lessons }}
@@ -18,32 +18,32 @@
       <td align="right">{{ .date }}</td>
       <td>{{ .title }}</td>
       
-      {{ if .reading }}
-      <td align="center"><a href="{{ .Site.baseurl }}/reading/{{ .reading }}">
+      {{ if .Lecture561 }}
+      <td align="center"><a href="{{ .Site.baseurl }}/Lecture561/{{ .Lecture561 }}">
           <i class="fa fa-book fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
           <i class="fa fa-book fa-lg"></i></font></td>
       {{ end }}
 
-      {{ if .assignment }}
-      <td align="center"><a href="{{ .Site.baseurl }}/assignment/{{ .assignment }}">
+      {{ if .assignment561 }}
+      <td align="center"><a href="{{ .Site.baseurl }}/assignment561/{{ .assignment561 }}">
           <i class="fa fa-keyboard-o fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
           <i class="fa fa-keyboard-o fa-lg"></i></font></td>
       {{ end }}
       
-      {{ if .lecture }}
-      <td align="center"><a href="{{ .Site.baseurl }}/lecture/{{ .lecture  }}">
+      {{ if .lecture564 }}
+      <td align="center"><a href="{{ .Site.baseurl }}/lecture564/{{ .lecture564  }}">
           <i class="fa fa-file-image-o  fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
           <i class="fa fa-file-image-o  fa-lg"></i></font></td>
       {{ end }}
       
-      {{ if .lab }}
-      <td align="center"><a href="{{ .Site.baseurl }}/lab/{{ .lab }}">
+      {{ if .assignment564 }}
+      <td align="center"><a href="{{ .Site.baseurl }}/assignment564/{{ .assignment564 }}">
           <i class="fa fa-check-circle fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
