arrange the files

--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -18,8 +18,8 @@
       <td align="right">{{ .date }}</td>
       <td>{{ .title }}</td>
       
-      {{ if .Lecture561 }}
-      <td align="center"><a href="{{ .Site.baseurl }}/Lecture561/{{ .Lecture561 }}">
+      {{ if .lecture561 }}
+      <td align="center"><a href="{{ .Site.baseurl }}/lecture561/{{ .lecture561 }}">
           <i class="fa fa-book fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
