try syllabus 3rd

--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -18,11 +18,11 @@
   {{ range $.Site.Data.lessons }}
     {{range . }}
     <tr>
+      <th>{{ .stat561.title }}</th>
       <td align="right">{{ .date }}</td>
-      <td>{{ .title }}</td>
       
       {{ if .note }}
-      <td align="center"><a href="{{ .Site.baseurl }}/note/{{ .note }}">
+      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .note }}">
           <i class="fa fa-book fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
@@ -30,7 +30,7 @@
       {{ end }}
 
       {{ if .hw }}
-      <td align="center"><a href="{{ .Site.baseurl }}/hw/{{ .hw }}">
+      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .hw }}">
           <i class="fa fa-keyboard-o fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
@@ -38,7 +38,7 @@
       {{ end }}
       
       {{ if .lab }}
-      <td align="center"><a href="{{ .Site.baseurl }}/lab/{{ .lab  }}">
+      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .lab  }}">
           <i class="fa fa-file-image-o  fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
@@ -46,7 +46,7 @@
       {{ end }}
       
       {{ if .ex }}
-      <td align="center"><a href="{{ .Site.baseurl }}/ex/{{ .ex }}">
+      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .ex }}">
           <i class="fa fa-check-circle fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
@@ -54,7 +54,7 @@
       {{ end }}
 
       {{ if .temp }}
-      <td align="center"><a href="{{ .Site.baseurl }}/temp/{{ .temp }}">
+      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .temp }}">
           <i class="fa fa-check-circle fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
@@ -62,7 +62,7 @@
       {{ end }}
 
       {{ if .backup }}
-      <td align="center"><a href="{{ .Site.baseurl }}/backup/{{ .backup }}">
+      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .backup }}">
           <i class="fa fa-check-circle fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
