try syllabus 4th

--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -5,8 +5,8 @@
 <table class="table" style="max-width:900px;margin-left:auto;margin-right:auto">
 
   <tr>
-    <th style="width:7.5%;text-align:right">Date</th>
     <th style="width:7.5%">Course</th>
+    <th style="width:7.5%;text-align:right">Date</th>
     <th style="width:7.5%;text-align:center">Notes</th>
     <th style="width:7.5%;text-align:center">Assignments</th>
     <th style="width:7.5%;text-align:center">Labs</th>
@@ -18,10 +18,10 @@
   {{ range $.Site.Data.lessons }}
     {{range . }}
     <tr>
-      <th>{{ .stat561.title }}</th>
+      <th>{{ .title }}</th>
       <td align="right">{{ .date }}</td>
       
-      {{ if .note }}
+      {{ if .stat561.note }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .note }}">
           <i class="fa fa-book fa-lg"></i></a></td>
       {{ else }}
