try syllabus 5th

--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -15,13 +15,13 @@
     <th style="width:7.5%;text-align:center">Backup</th>
   </tr>
 
-  {{ range $.Site.Data.lessons }}
-    {{range . }}
+  {{ range $.Site.Data.lessons.stat561 }}
+    {{range .lessons.stat561 }}
     <tr>
       <th>{{ .title }}</th>
       <td align="right">{{ .date }}</td>
       
-      {{ if .stat561.note }}
+      {{ if .note }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .note }}">
           <i class="fa fa-book fa-lg"></i></a></td>
       {{ else }}
@@ -63,6 +63,63 @@
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .backup }}">
+          <i class="fa fa-check-circle fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-check-circle fa-lg"></i></font></td>
+      {{ end }}
+    </tr>
+    {{ end }}
+  {{ end }}
+  
+  {{ range $.Site.Data.lessons.stat564 }}    
+    {{range .lessons.stat564 }}
+    <tr>
+      <th>{{ .title }}</th>
+      <td align="right">{{ .date }}</td>
+      
+      {{ if .note }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .note }}">
+          <i class="fa fa-book fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-book fa-lg"></i></font></td>
+      {{ end }}
+
+      {{ if .hw }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .hw }}">
+          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
+      {{ end }}
+      
+      {{ if .lab }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .lab  }}">
+          <i class="fa fa-file-image-o  fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-file-image-o  fa-lg"></i></font></td>
+      {{ end }}
+      
+      {{ if .ex }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .ex }}">
+          <i class="fa fa-check-circle fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-check-circle fa-lg"></i></font></td>
+      {{ end }}
+
+      {{ if .temp }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .temp }}">
+          <i class="fa fa-check-circle fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-check-circle fa-lg"></i></font></td>
+      {{ end }}
+
+      {{ if .backup }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .backup }}">
           <i class="fa fa-check-circle fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
