try syllabus 6th

--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -15,8 +15,8 @@
     <th style="width:7.5%;text-align:center">Backup</th>
   </tr>
 
-  {{ range $.Site.Data.lessons.stat561 }}
-    {{range .lessons.stat561 }}
+  {{ range $.Site.Data.lessons }}
+    {{range . }}
     <tr>
       <th>{{ .title }}</th>
       <td align="right">{{ .date }}</td>
@@ -72,8 +72,8 @@
     {{ end }}
   {{ end }}
   
-  {{ range $.Site.Data.lessons.stat564 }}    
-    {{range .lessons.stat564 }}
+  {{ range $.Site.Data.lessons }}    
+    {{range . }}
     <tr>
       <th>{{ .title }}</th>
       <td align="right">{{ .date }}</td>
