--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -15,8 +15,8 @@
     <th style="width:7.5%;text-align:center">Backup</th>
   </tr>
 
-  {{ range $.Site.Data.lessons }}
-    {{range . }}
+  {{ range $.Site.Data.lessons.stat561 }}
+
     <tr>
       <th>{{ .title }}</th>
       <td align="right">{{ .date }}</td>
@@ -69,11 +69,11 @@
           <i class="fa fa-check-circle fa-lg"></i></font></td>
       {{ end }}
     </tr>
-    {{ end }}
+
   {{ end }}
   
-  {{ range $.Site.Data.lessons }}    
-    {{range . }}
+  {{ range $.Site.Data.lessons.stat564 }}    
+
     <tr>
       <th>{{ .title }}</th>
       <td align="right">{{ .date }}</td>
@@ -126,7 +126,7 @@
           <i class="fa fa-check-circle fa-lg"></i></font></td>
       {{ end }}
     </tr>
-    {{ end }}
+
   {{ end }}
 
 </table>
