--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -15,118 +15,63 @@
     <th style="width:7.5%;text-align:center">Backup</th>
   </tr>
 
-  {{ range $.Site.Data.lessons.stat561 }}
-
+  {{ range $.Site.Data.lessons }}
+    {{range . }}
     <tr>
       <th>{{ .title }}</th>
       <td align="right">{{ .date }}</td>
       
-      {{ if .note }}
-      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .note }}">
+      {{ if .stat561 }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ . }}">
           <i class="fa fa-book fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
           <i class="fa fa-book fa-lg"></i></font></td>
       {{ end }}
 
-      {{ if .hw }}
-      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .hw }}">
+      {{ if .stat562 }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat562/{{ . }}">
           <i class="fa fa-keyboard-o fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
           <i class="fa fa-keyboard-o fa-lg"></i></font></td>
       {{ end }}
       
-      {{ if .lab }}
-      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .lab  }}">
+      {{ if .stat563 }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat5613/{{ . }}">
           <i class="fa fa-file-image-o  fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
           <i class="fa fa-file-image-o  fa-lg"></i></font></td>
       {{ end }}
       
-      {{ if .ex }}
-      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .ex }}">
+      {{ if .stat564 }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ . }}">
           <i class="fa fa-check-circle fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
           <i class="fa fa-check-circle fa-lg"></i></font></td>
       {{ end }}
 
-      {{ if .temp }}
-      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .temp }}">
+      {{ if .stat565 }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat565/{{ . }}">
           <i class="fa fa-check-circle fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
           <i class="fa fa-check-circle fa-lg"></i></font></td>
       {{ end }}
 
-      {{ if .backup }}
-      <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .backup }}">
+      {{ if .stat566 }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat566/{{ . }}">
           <i class="fa fa-check-circle fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
           <i class="fa fa-check-circle fa-lg"></i></font></td>
       {{ end }}
     </tr>
-
+    {{ end }}
   {{ end }}
   
-  {{ range $.Site.Data.lessons.stat564 }}    
 
-    <tr>
-      <th>{{ .title }}</th>
-      <td align="right">{{ .date }}</td>
-      
-      {{ if .note }}
-      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .note }}">
-          <i class="fa fa-book fa-lg"></i></a></td>
-      {{ else }}
-        <td align="center"><font color="f1f1f1">
-          <i class="fa fa-book fa-lg"></i></font></td>
-      {{ end }}
-
-      {{ if .hw }}
-      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .hw }}">
-          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
-      {{ else }}
-        <td align="center"><font color="f1f1f1">
-          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
-      {{ end }}
-      
-      {{ if .lab }}
-      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .lab  }}">
-          <i class="fa fa-file-image-o  fa-lg"></i></a></td>
-      {{ else }}
-        <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-image-o  fa-lg"></i></font></td>
-      {{ end }}
-      
-      {{ if .ex }}
-      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .ex }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
-      {{ else }}
-        <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
-      {{ end }}
-
-      {{ if .temp }}
-      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .temp }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
-      {{ else }}
-        <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
-      {{ end }}
-
-      {{ if .backup }}
-      <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .backup }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
-      {{ else }}
-        <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
-      {{ end }}
-    </tr>
-
-  {{ end }}
 
 </table>
